added the generation of sitemaps to the release management command. modified apache configuration to serve em up. fixes #171

--- a/conf/httpd-public1.conf
+++ b/conf/httpd-public1.conf
@@ -132,6 +132,7 @@ WSGIScriptAlias / /ndnp/public1/chronam/conf/django-public1.wsgi
 AliasMatch ^/data/(.+) /batches/$1
 AliasMatch ^/data/ /batches/
 Alias /robots.txt /ndnp/public1/chronam/chronam/static/robots.txt
+Alias /sitemaps/ /ndnp/public1/chronam/chronam/static/sitemaps/
 
 #
 # Each directory to which Apache has access can be configured with respect
