--- a/conf/httpd-staging-linux.conf
+++ b/conf/httpd-staging-linux.conf
@@ -61,6 +61,7 @@ WSGIScriptAlias / /ndnp/staging/chronam/conf/django-staging.wsgi
 AliasMatch ^/data/(.+) /batches/$1
 AliasMatch ^/data/ /batches/
 Alias /robots.txt /ndnp/staging/chronam/chronam/static/robots.txt
+Alias /sitemaps/ /ndnp/staging/chronam/chronam/static/sitemaps/
 
 #
 # Note that from this point forward you must specifically allow
