--- a/conf/httpd-staging.conf
+++ b/conf/httpd-staging.conf
@@ -133,6 +133,7 @@ WSGIScriptAlias / /ndnp/staging/chronam/conf/django-staging.wsgi
 AliasMatch ^/data/(.+) /batches/$1
 AliasMatch ^/data/ /batches/
 Alias /robots.txt /ndnp/staging/chronam/chronam/static/robots.txt
+Alias /sitemaps/ /ndnp/staging/chronam/chronam/static/sitemaps/
 
 #
 # Each directory to which Apache has access can be configured with respect
