--- a/conf/httpd-public3.conf
+++ b/conf/httpd-public3.conf
@@ -133,6 +133,7 @@ WSGIScriptAlias / /ndnp/public3/chronam/conf/django-public3.wsgi
 AliasMatch ^/data/(.+) /batches/$1
 AliasMatch ^/data/ /batches/
 Alias /robots.txt /ndnp/public3/chronam/chronam/static/robots.txt
+Alias /sitemaps/ /ndnp/public3/chronam/chronam/static/sitemaps/
 
 #
 # Each directory to which Apache has access can be configured with respect
