it is recommended to keep sitemaps at the root, e.g. http://chroniclingamerica.loc.gov/sitemap.xml instead of http://chroniclingamerica.loc.gov/sitemaps/index.xml refs #171

--- a/conf/httpd-public2.conf
+++ b/conf/httpd-public2.conf
@@ -118,6 +118,9 @@ RewriteRule ^/titles/place/(.+)$ /titles/places/$1 [redirect=permanent]
 RewriteRule ^/batches.xml /batches/feed/ [redirect=permanent,last]
 RewriteRule ^/events.xml /events/feed/ [redirect=permanent,last]
 
+RewriteRule ^/sitemap.xml$ /ndnp/public2/chronam/chronam/static/sitemaps/sitemap.xml
+RewriteRule ^/(sitemap-\d+.xml)$ /ndnp/public2/chronam/chronam/static/sitemaps/$1
+
 #
 # DocumentRoot: The directory out of which you will serve your
 # documents. By default, all requests are taken from this directory, but
