--- a/projects/chronam-public1/conf/httpd-public1.conf
+++ b/projects/chronam-public1/conf/httpd-public1.conf
@@ -7,7 +7,7 @@
 # at a local disk.  If you wish to share the same ServerRoot for multiple
 # httpd daemons, you will need to change at least LockFile and PidFile.
 #
-ServerRoot "/ndnp/staging/apache2"
+ServerRoot "/ndnp/public1/apache2"
 
 #
 # Listen: Allows you to bind Apache to specific IP addresses and/or
@@ -118,25 +118,25 @@ RewriteRule ^/titles/place/(.+)$ /titles/places/$1 [redirect=permanent]
 RewriteRule ^/batches.xml /batches/feed/ [redirect=permanent,last]
 RewriteRule ^/events.xml /events/feed/ [redirect=permanent,last]
 
-RewriteRule ^/sitemap.xml$ /ndnp/staging/chronam/chronam/static/sitemaps/sitemap.xml
-RewriteRule ^/(sitemap-\d+.xml)$ /ndnp/staging/chronam/chronam/static/sitemaps/$1
+RewriteRule ^/sitemap.xml$ /ndnp/public1/chronam/chronam/static/sitemaps/sitemap.xml
+RewriteRule ^/(sitemap-\d+.xml)$ /ndnp/public1/chronam/chronam/static/sitemaps/$1
 
 #
 # DocumentRoot: The directory out of which you will serve your
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/ndnp/staging/chronam/apps/chronam-web/chronam/web/media/"
+DocumentRoot "/ndnp/public1/chronam/apps/chronam-web/chronam/web/media/"
 
-WSGISocketPrefix /ndnp/staging/
-WSGIDaemonProcess chronam-wsgi-app processes=4 threads=16 python-eggs=/ndnp/staging/.python-eggs 
+WSGISocketPrefix /ndnp/public1/
+WSGIDaemonProcess chronam-wsgi-app processes=4 threads=16 python-eggs=/ndnp/public1/.python-eggs 
 WSGIProcessGroup chronam-wsgi-app
-WSGIScriptAlias / /ndnp/staging/chronam/projects/chronam-staging/conf/django-staging.wsgi
+WSGIScriptAlias / /ndnp/public1/chronam/projects/chronam-public1/conf/django-public1.wsgi
 
 AliasMatch ^/data/(.+) /batches/$1
 AliasMatch ^/data/ /batches/
-Alias /robots.txt /ndnp/staging/chronam/chronam/static/robots.txt
-Alias /sitemaps/ /ndnp/staging/chronam/chronam/static/sitemaps/
+Alias /robots.txt /ndnp/public1/chronam/chronam/static/robots.txt
+Alias /sitemaps/ /ndnp/public1/chronam/chronam/static/sitemaps/
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -159,7 +159,7 @@ Alias /sitemaps/ /ndnp/staging/chronam/chronam/static/sitemaps/
 # you might expect, make sure that you have specifically enabled it
 # below.
 #
-<Directory /ndnp/staging/chronam/chronam/static>
+<Directory /ndnp/public1/chronam/chronam/static>
     ExpiresActive On
     ExpiresDefault A86400
 
@@ -201,7 +201,7 @@ Alias /sitemaps/ /ndnp/staging/chronam/chronam/static/sitemaps/
 # logged here.  If you *do* define an error logfile for a <VirtualHost>
 # container, that host's errors will be logged there and not here.
 #
-ErrorLog "|/ndnp/staging/apache2/bin/rotatelogs /ndnp/staging/apache2/logs/error_log.%Y%m%d 86400"
+ErrorLog "|/ndnp/public1/apache2/bin/rotatelogs /ndnp/public1/apache2/logs/error_log.%Y%m%d 86400"
 
 #
 # LogLevel: Control the number of messages logged to the error_log.
@@ -230,7 +230,7 @@ LogLevel warn
     # define per-<VirtualHost> access logfiles, transactions will be
     # logged therein and *not* in this file.
     #
-    CustomLog "|/ndnp/staging/apache2/bin/rotatelogs /ndnp/staging/apache2/logs/access_log.%Y%m%d 86400" combined
+    CustomLog "|/ndnp/public1/apache2/bin/rotatelogs /ndnp/public1/apache2/logs/access_log.%Y%m%d 86400" combined
 
     #
     # If you prefer a logfile with access, agent, and referer information
@@ -240,7 +240,7 @@ LogLevel warn
 
     SetEnv CACHE_MISS 1
     LogFormat "%t \"%r\" %X %D %{CACHE_MISS}e %>s" performance
-    CustomLog "|/ndnp/staging/apache2/bin/rotatelogs /ndnp/staging/apache2/logs/performance_log.%Y%m%d 86400" performance
+    CustomLog "|/ndnp/public1/apache2/bin/rotatelogs /ndnp/public1/apache2/logs/performance_log.%Y%m%d 86400" performance
 
 </IfModule>
 
