--- a/projects/chronam-public1/conf/my-public1.cnf
+++ b/projects/chronam-public1/conf/my-public1.cnf
@@ -6,14 +6,14 @@
 [client]
 #password	= your_password
 port		= 3307
-socket		= /tmp/mysql_staging.sock
+socket		= /tmp/mysql_public1.sock
 
 # Here follows entries for some specific programs
 
 # The MySQL server
 [mysqld]
 port		= 3307
-socket		= /tmp/mysql_staging.sock
+socket		= /tmp/mysql_public1.sock
 skip-locking
 key_buffer = 384M
 max_allowed_packet = 10M
