changed document root to /ndnp/public1/static; updated release.py to write sitemap files into document root

--- a/projects/chronam-public1/conf/httpd-public1.conf
+++ b/projects/chronam-public1/conf/httpd-public1.conf
@@ -118,8 +118,8 @@ RewriteRule ^/titles/place/(.+)$ /titles/places/$1 [redirect=permanent]
 RewriteRule ^/batches.xml /batches/feed/ [redirect=permanent,last]
 RewriteRule ^/events.xml /events/feed/ [redirect=permanent,last]
 
-RewriteRule ^/sitemap.xml$ /ndnp/public1/chronam/chronam/static/sitemaps/sitemap.xml
-RewriteRule ^/(sitemap-\d+.xml)$ /ndnp/public1/chronam/chronam/static/sitemaps/$1
+RewriteRule ^/sitemap.xml$ /ndnp/public1/static/sitemaps/sitemap.xml
+RewriteRule ^/(sitemap-\d+.xml)$ /ndnp/public1/static/sitemaps/$1
 
 #
 # DocumentRoot: The directory out of which you will serve your
@@ -135,8 +135,8 @@ WSGIScriptAlias / /ndnp/public1/chronam/projects/chronam-public1/conf/django-pub
 
 AliasMatch ^/data/(.+) /batches/$1
 AliasMatch ^/data/ /batches/
-Alias /robots.txt /ndnp/public1/chronam/chronam/static/robots.txt
-Alias /sitemaps/ /ndnp/public1/chronam/chronam/static/sitemaps/
+Alias /robots.txt /ndnp/public1/static/robots.txt
+Alias /sitemaps/ /ndnp/public1/static/sitemaps/
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -159,7 +159,7 @@ Alias /sitemaps/ /ndnp/public1/chronam/chronam/static/sitemaps/
 # you might expect, make sure that you have specifically enabled it
 # below.
 #
-<Directory /ndnp/public1/chronam/chronam/static>
+<Directory /ndnp/public1/static>
     ExpiresActive On
     ExpiresDefault A86400
 
