fixed up static file related bits / aligned with sun11

--- a/projects/chronam-public1/conf/httpd-public1.conf
+++ b/projects/chronam-public1/conf/httpd-public1.conf
@@ -118,25 +118,26 @@ RewriteRule ^/titles/place/(.+)$ /titles/places/$1 [redirect=permanent]
 RewriteRule ^/batches.xml /batches/feed/ [redirect=permanent,last]
 RewriteRule ^/events.xml /events/feed/ [redirect=permanent,last]
 
-RewriteRule ^/sitemap.xml$ /ndnp/public1/static/sitemaps/sitemap.xml
-RewriteRule ^/(sitemap-\d+.xml)$ /ndnp/public1/static/sitemaps/$1
-
 #
 # DocumentRoot: The directory out of which you will serve your
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/ndnp/public1/chronam/apps/chronam-web/chronam/web/media/"
+DocumentRoot "/ndnp/public1/static"
+
+AliasMatch ^/data/(.+) /batches/$1
+AliasMatch ^/data/ /batches/
+AliasMatch ^/robots.txt$ /ndnp/public1/static/robots.txt
+AliasMatch ^/sitemap.xml$ /ndnp/public1/static/sitemap.xml
+AliasMatch ^/(sitemap-\d+.xml)$ /ndnp/public1/static/$1
+AliasMatch ^/css/(.+) /ndnp/public1/static/css/$1
+AliasMatch ^/images/(.+) /ndnp/public1/static/images/$1
+AliasMatch ^/javascript/(.+) /ndnp/public1/static/javascript/$1
 
 WSGISocketPrefix /ndnp/public1/
 WSGIDaemonProcess chronam-wsgi-app processes=4 threads=16 python-eggs=/ndnp/public1/.python-eggs 
 WSGIProcessGroup chronam-wsgi-app
 WSGIScriptAlias / /ndnp/public1/chronam/projects/chronam-public1/conf/django-public1.wsgi
-
-AliasMatch ^/data/(.+) /batches/$1
-AliasMatch ^/data/ /batches/
-Alias /robots.txt /ndnp/public1/static/robots.txt
-Alias /sitemaps/ /ndnp/public1/static/sitemaps/
 
 #
 # Each directory to which Apache has access can be configured with respect
