chronam-dev -> chronam

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -1,14 +1,14 @@
 # WSGISocketPrefix -- http://code.google.com/p/modwsgi/wiki/ConfigurationDirectives#WSGISocketPrefix
-WSGIPythonHome /ndnp/chronam-dev
-WSGIDaemonProcess chronam-wsgi-app processes=2 threads=8 maximum-requests=100 python-eggs=/ndnp/chronam-dev/.python-eggs 
+WSGIPythonHome /ndnp/chronam
+WSGIDaemonProcess chronam-wsgi-app processes=2 threads=8 maximum-requests=100 python-eggs=/ndnp/chronam/.python-eggs 
 WSGIProcessGroup chronam-wsgi-app
 
 #ServerAdmin you@example.com
 ServerName np.rdc.lctl.gov
 
 
-WSGIScriptAlias /beta /ndnp/chronam-dev/conf/chronam-loc.wsgi
-WSGIScriptAlias / /ndnp/chronam-dev/conf/chronam.wsgi
+WSGIScriptAlias /beta /ndnp/chronam/conf/chronam-loc.wsgi
+WSGIScriptAlias / /ndnp/chronam/conf/chronam.wsgi
 
 RewriteEngine  on
 
@@ -39,16 +39,16 @@ RewriteRule ^/events.xml /events/feed/ [redirect=permanent,last]
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/ndnp/chronam-dev/static"
+DocumentRoot "/ndnp/chronam/static"
 
 AliasMatch ^/data/(.+) /batches/$1
 AliasMatch ^/data/ /batches/
-AliasMatch ^/robots.txt$ /ndnp/chronam-dev/static/robots.txt
-AliasMatch ^/sitemap.xml$ /ndnp/chronam-dev/static/sitemap.xml
-AliasMatch ^/(sitemap-\d+.xml)$ /ndnp/chronam-dev/static/$1
-AliasMatch ^/css/(.+) /ndnp/chronam-dev/static/css/$1
-AliasMatch ^/images/(.+) /ndnp/chronam-dev/static/images/$1
-AliasMatch ^/javascript/(.+) /ndnp/chronam-dev/static/javascript/$1
+AliasMatch ^/robots.txt$ /ndnp/chronam/static/robots.txt
+AliasMatch ^/sitemap.xml$ /ndnp/chronam/static/sitemap.xml
+AliasMatch ^/(sitemap-\d+.xml)$ /ndnp/chronam/static/$1
+AliasMatch ^/css/(.+) /ndnp/chronam/static/css/$1
+AliasMatch ^/images/(.+) /ndnp/chronam/static/images/$1
+AliasMatch ^/javascript/(.+) /ndnp/chronam/static/javascript/$1
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -71,7 +71,7 @@ AliasMatch ^/javascript/(.+) /ndnp/chronam-dev/static/javascript/$1
 # you might expect, make sure that you have specifically enabled it
 # below.
 #
-<Directory /ndnp/chronam-dev/static>
+<Directory /ndnp/chronam/static>
     ExpiresActive On
     ExpiresDefault A86400
 
