changed rdc.lctl.gov references to the corresponding sourceforge.net references

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -4,7 +4,7 @@ WSGIDaemonProcess chronam-wsgi-app processes=2 threads=8 maximum-requests=100 py
 WSGIProcessGroup chronam-wsgi-app
 
 #ServerAdmin you@example.com
-ServerName np.rdc.lctl.gov
+#ServerName localhost
 
 
 WSGIScriptAlias /beta /ndnp/chronam/conf/chronam-loc.wsgi
