--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -39,7 +39,7 @@ RewriteRule ^/events.xml /events/feed/ [redirect=permanent,last]
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/ndnp/chronam/static"
+DocumentRoot "/opt/chronam/static"
 
 AliasMatch ^/data/(.+) /batches/$1
 AliasMatch ^/data/ /batches/
