more /ndnp -> /opt missed in d8bbc30d1b68

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -1,14 +1,14 @@
 # WSGISocketPrefix -- http://code.google.com/p/modwsgi/wiki/ConfigurationDirectives#WSGISocketPrefix
-WSGIPythonHome /ndnp/chronam
-WSGIDaemonProcess chronam-wsgi-app processes=2 threads=8 maximum-requests=100 python-eggs=/ndnp/chronam/.python-eggs 
+WSGIPythonHome /opt/chronam
+WSGIDaemonProcess chronam-wsgi-app processes=2 threads=8 maximum-requests=100 python-eggs=/opt/chronam/.python-eggs 
 WSGIProcessGroup chronam-wsgi-app
 
 #ServerAdmin you@example.com
 #ServerName localhost
 
 
-WSGIScriptAlias /beta /ndnp/chronam/conf/chronam-loc.wsgi
-WSGIScriptAlias / /ndnp/chronam/conf/chronam.wsgi
+WSGIScriptAlias /beta /opt/chronam/conf/chronam-loc.wsgi
+WSGIScriptAlias / /opt/chronam/conf/chronam.wsgi
 
 RewriteEngine  on
 
@@ -43,9 +43,9 @@ DocumentRoot "/opt/chronam/static"
 
 AliasMatch ^/data/(.+) /batches/$1
 AliasMatch ^/data/ /batches/
-AliasMatch ^/robots.txt$ /ndnp/chronam/static/robots.txt
-AliasMatch ^/sitemap.xml$ /ndnp/chronam/static/sitemap.xml
-AliasMatch ^/(sitemap-\d+.xml)$ /ndnp/chronam/static/$1
+AliasMatch ^/robots.txt$ /opt/chronam/static/robots.txt
+AliasMatch ^/sitemap.xml$ /opt/chronam/static/sitemap.xml
+AliasMatch ^/(sitemap-\d+.xml)$ /opt/chronam/static/$1
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -68,7 +68,7 @@ AliasMatch ^/(sitemap-\d+.xml)$ /ndnp/chronam/static/$1
 # you might expect, make sure that you have specifically enabled it
 # below.
 #
-<Directory /ndnp/chronam/static>
+<Directory /opt/chronam/static>
     ExpiresActive On
     ExpiresDefault A86400
 
