added mod_cache options, and turned off debug

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -1,4 +1,22 @@
 # WSGISocketPrefix -- http://code.google.com/p/modwsgi/wiki/ConfigurationDirectives#WSGISocketPrefix
+
+#LoadModule wsgi_module modules/mod_wsgi.so
+#LoadModule cache_module modules/mod_cache.so
+#LoadModule expires_module modules/mod_expires.so
+#LoadModule rewrite_module modules/mod_rewrite.so
+#LoadModule disk_cache_module modules/mod_disk_cache.so
+
+# chronam disk cache options
+CacheIgnoreCacheControl Off
+CacheRoot /opt/chronam/cache
+CacheEnable disk /
+CacheEnable disk http://
+CacheDisable /data
+CacheDirLength 1
+CacheDirLevels 4
+CacheDefaultExpire 3600
+CacheMaxFileSize 2000000
+
 WSGIPythonHome /opt/chronam
 WSGIDaemonProcess chronam-wsgi-app processes=2 threads=8 maximum-requests=100 python-eggs=/opt/chronam/.python-eggs 
 WSGIProcessGroup chronam-wsgi-app
