cache dir is now set to /opt/chronam/data/cache

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -1,14 +1,6 @@
-# WSGISocketPrefix -- http://code.google.com/p/modwsgi/wiki/ConfigurationDirectives#WSGISocketPrefix
-
-#LoadModule wsgi_module modules/mod_wsgi.so
-#LoadModule cache_module modules/mod_cache.so
-#LoadModule expires_module modules/mod_expires.so
-#LoadModule rewrite_module modules/mod_rewrite.so
-#LoadModule disk_cache_module modules/mod_disk_cache.so
-
 # chronam disk cache options
 CacheIgnoreCacheControl Off
-CacheRoot /opt/chronam/cache
+CacheRoot /opt/chronam/data/cache
 CacheEnable disk /
 CacheEnable disk http://
 CacheDisable /data
