get data directory working off of /opt/chronam/data/

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -49,8 +49,8 @@ RewriteRule ^/events.xml /events/feed/ [redirect=permanent,last]
 #
 DocumentRoot "/opt/chronam/static"
 
-AliasMatch ^/data/(.+) /batches/$1
-AliasMatch ^/data/ /batches/
+AliasMatch ^/data/(.+) /opt/chronam/data/$1
+AliasMatch ^/data/ /opt/chronam/data/
 AliasMatch ^/robots.txt$ /opt/chronam/static/robots.txt
 AliasMatch ^/sitemap.xml$ /opt/chronam/static/sitemap.xml
 AliasMatch ^/(sitemap-\d+.xml)$ /opt/chronam/static/$1
@@ -88,7 +88,7 @@ AliasMatch ^/(sitemap-\d+.xml)$ /opt/chronam/static/$1
 
 </Directory>
 
-<Directory /batches>
+<Directory /opt/chronam/data>
     Options Indexes FollowSymLinks
     Allow from all
 </Directory>
