adding install for redhat; tweaks to support redhat install

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -10,6 +10,7 @@ CacheDefaultExpire 3600
 CacheMaxFileSize 2000000
 
 WSGIPythonHome /opt/chronam/ENV
+WSGISocketPrefix /opt/chronam
 WSGIDaemonProcess chronam-wsgi-app processes=6 threads=8 maximum-requests=100 python-eggs=/opt/chronam/.python-eggs 
 WSGIProcessGroup chronam-wsgi-app
 
