more changes in support of ocr dumps and an improved json api

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -42,6 +42,7 @@ RewriteRule ^/lccn/(.+)/essay/?$ /lccn/$1/essays/ [redirect=permanent]
 RewriteRule ^/titles/place/(.+)$ /titles/places/$1 [redirect=permanent]
 RewriteRule ^/batches.xml /batches/feed/ [redirect=permanent,last]
 RewriteRule ^/events.xml /events/feed/ [redirect=permanent,last]
+RewriteRule ^/about/ocr/ /ocr/ [redirect=permanent,last]
 
 #
 # DocumentRoot: The directory out of which you will serve your
