updated settings and INSTALL document

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -53,6 +53,9 @@ AliasMatch ^/robots.txt$ /opt/chronam/static/robots.txt
 AliasMatch ^/sitemap.xml$ /opt/chronam/static/sitemap.xml
 AliasMatch ^/(sitemap-\d+.xml)$ /opt/chronam/static/$1
 
+ErrorLog "|/usr/sbin/rotatelogs /logs/apache/error_log.%Y%m%d 86400"
+CustomLog "|/usr/sbin/rotatelogs /logs/apache/access_log.%Y%m%d 86400" combined
+
 #
 # Each directory to which Apache has access can be configured with respect
 # to which services and features are allowed and/or disabled in that
