replaced with my.cnf used on ndnpqr01vlp

--- a/conf/my.cnf
+++ b/conf/my.cnf
@@ -1,15 +1,25 @@
-[mysqld_safe]
-log-error=/var/log/mysqld.log
-pid-file=/var/run/mysqld/mysqld.pid
+[client]
+port        = 3306
+socket=/var/lib/mysql/mysql.sock
 
 [mysqld]
-datadir=/var/lib/mysql
+## DBA ##
 socket=/var/lib/mysql/mysql.sock
+character_set_server=utf8
+datadir=/mydata/data
+innodb_data_home_dir=/mydata/innodb
+innodb_log_group_home_dir=/mydata/innodb
+pid-file=/mydata/data/mysqld.pid
 user=mysql
-# Disabling symbolic-links is recommended to prevent assorted security risks
-symbolic-links=0
+log-bin=/mydata/logs/bin/mysql_bin
+relay-log-info-file=/mydata/logs/relay/mysql_relay_log.info
 
-skip-locking
+# Disabling symbolic-links is recommended to prevent assorted security risks symbolic-links=0
+#bind-address        = 127.0.0.1
+bind-address        = 0.0.0.0
+
+user=mysql
+#skip-locking
 key_buffer = 1024M
 max_allowed_packet = 10M
 table_cache = 512
@@ -22,15 +32,48 @@ query_cache_limit = 8M
 query_cache_size = 512M
 # Try number of CPU's*2 for thread_concurrency
 thread_concurrency = 12
-character_set_server = utf8
 long-query-time=1
-log-slow-queries=slow-queries.log
+slow_query_log_file=/mysql/admin/mysql_logs/slow_query.log
+
 max_connections=600
+innodb_file_per_table=1 
 
 # required unique id between 1 and 2^32 - 1
 # defaults to 1 if master-host is not set
 # but will not function as a master if omitted
 server-id	= 1
+
+
+[mysqld_safe]
+pid-file=/mydata/data/mysqld.pid
+socket=/var/lib/mysql/mysql.sock
+
+log-error=/mysql/admin/mysql_logs/log.error
+general_log_file=/mysql/admin/mysql_logs/general.log
+slow_query_log=/mysql/admin/mysql_logs/slow_query.log
+character_set_server=utf8
+datadir=/mydata/data
+innodb_data_home_dir=/mydata/innodb
+innodb_log_group_home_dir=/mydata/innodb
+log-bin=/mydata/logs/bin/mysql_bin
+#relay-log=/mydata/logs/relay/mysql_relay_log
+#relay-log-index=/mydata/logs/relay/mysql_relay_bin.index
+relay-log-info-file=/mydata/logs/relay/mysql_relay_log.info
+#master-info-file=/mydata/logs/relay/mysql_master.info
+tmpdir=/mytmp
+slave_load_tmpdir=/mytmp
+## memory setup of small instance
+key_buffer_size=16M
+max_allowed_packet=16M
+table_open_cache=16
+sort_buffer_size=16K
+read_buffer_size=16K
+read_rnd_buffer_size=64k
+net_buffer_length=2k
+max_connections=250
+query_cache_size=16M
+myisam_sort_buffer_size=32M
+innodb_file_per_table=1 
 
 [mysqldump]
 quick
@@ -38,8 +81,6 @@ max_allowed_packet = 16M
 
 [mysql]
 no-auto-rehash
-# Remove the next comment character if you are not familiar with SQL
-#safe-updates
 
 [isamchk]
 key_buffer = 256M
@@ -55,3 +96,6 @@ write_buffer = 2M
 
 [mysqlhotcopy]
 interactive-timeout
+
+
+
