changed log location based on directory name change

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -53,8 +53,8 @@ AliasMatch ^/robots.txt$ /opt/chronam/static/robots.txt
 AliasMatch ^/sitemap.xml$ /opt/chronam/static/sitemap.xml
 AliasMatch ^/(sitemap-\d+.xml)$ /opt/chronam/static/$1
 
-ErrorLog "|/usr/sbin/rotatelogs /logs/apache/error_log.%Y%m%d 86400"
-CustomLog "|/usr/sbin/rotatelogs /logs/apache/access_log.%Y%m%d 86400" combined
+ErrorLog "|/usr/sbin/rotatelogs /logs/httpd/error_log.%Y%m%d 86400"
+CustomLog "|/usr/sbin/rotatelogs /logs/httpd/access_log.%Y%m%d 86400" combined
 
 #
 # Each directory to which Apache has access can be configured with respect
