added an additional condition to the canonical redirect to allow for access the site directly via its production name

--- a/conf/chronam-canonical.conf
+++ b/conf/chronam-canonical.conf
@@ -1,3 +1,4 @@
 RewriteCond %{HTTP_HOST}   !^chroniclingamerica\.loc\.gov [NC]
+RewriteCond %{HTTP_HOST}   !^ndn02blp\.loc\.gov [NC]
 RewriteCond %{HTTP_HOST}   !^$
 RewriteRule ^/(.*)         http://chroniclingamerica.loc.gov/$1 [redirect,last]
