modifying WSGIDaemonProcess to hopefully reduce or eliminate segfaults; refs #1249

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -1,6 +1,6 @@
 WSGIPythonHome /opt/chronam/ENV
 WSGISocketPrefix /opt/chronam
-WSGIDaemonProcess chronam-wsgi-app processes=14 threads=64 maximum-requests=10000 python-eggs=/opt/chronam/.python-eggs 
+WSGIDaemonProcess chronam-wsgi-app processes=48 threads=32 maximum-requests=0 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi
 WSGIProcessGroup chronam-wsgi-app
 
 #ServerAdmin you@example.com
