segmented wsgi daemons into two groups (image vs non-image); refs #1266.

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -1,7 +1,12 @@
 WSGIPythonHome /opt/chronam/ENV
 WSGISocketPrefix /opt/chronam
-WSGIDaemonProcess chronam-wsgi-app processes=14 threads=32 maximum-requests=0 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi
+WSGIDaemonProcess chronam-wsgi-app processes=24 threads=32 maximum-requests=0 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-app
+WSGIDaemonProcess chronam-wsgi-images processes=16 threads=1 maximum-requests=0 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-images
+
 WSGIProcessGroup chronam-wsgi-app
+<LocationMatch "/lccn/.*jpg$">
+    WSGIProcessGroup chronam-wsgi-images
+</LocationMatch>
 
 #ServerAdmin you@example.com
 #ServerName localhost
