initial commit for django_lc integration

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -84,3 +84,5 @@ AliasMatch ^/(sitemap-\d+.xml)$ /opt/chronam/static/$1
     Options Indexes FollowSymLinks
     Allow from all
 </Directory>
+
+Alias /static/*/ /opt/chronam/.static
