fixed url and apache config to work with DEBUG False

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -85,4 +85,4 @@ AliasMatch ^/(sitemap-\d+.xml)$ /opt/chronam/static/$1
     Allow from all
 </Directory>
 
-Alias /static/*/ /opt/chronam/.static
+AliasMatch ^/static/[^/]+/(.*)$ /opt/chronam/.static/$1
