upgraded to django 1.4.2; closes #1272

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -85,4 +85,14 @@ AliasMatch ^/(sitemap-\d+.xml)$ /opt/chronam/static/$1
     Allow from all
 </Directory>
 
-AliasMatch ^/static/[^/]+/(.*)$ /opt/chronam/.static/$1
+AliasMatch ^/media/(.*)$ /opt/chronam/.static-media/$1
+
+<Directory /opt/chronam/.static-media>
+    ExpiresActive On
+    ExpiresDefault A31536000
+
+    AllowOverride None
+
+    Order allow,deny
+    Allow from all
+</Directory>
