fixed issue with image tiles; moved image viewer controls onto viewer area; fixed navbar responsive layout issue

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -7,6 +7,9 @@ WSGIProcessGroup chronam-wsgi-app
 <LocationMatch "/lccn/.*jpg$">
     WSGIProcessGroup chronam-wsgi-images
 </LocationMatch>
+<LocationMatch "/images/.*jpg$">
+    WSGIProcessGroup chronam-wsgi-images
+</LocationMatch>
 
 #ServerAdmin you@example.com
 #ServerName localhost
