Django 1.5 changes, as well as RedHat config standardization.

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -1,5 +1,5 @@
 WSGIPythonHome /opt/chronam/ENV
-WSGISocketPrefix /opt/chronam
+WSGISocketPrefix /opt/chronam/
 WSGIDaemonProcess chronam-wsgi-app processes=24 threads=32 maximum-requests=0 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-app
 WSGIDaemonProcess chronam-wsgi-images processes=16 threads=1 maximum-requests=0 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-images
 
