Don't serve up static coordinate files via django

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -37,6 +37,8 @@ RewriteRule ^/batches.xml /batches/feed/ [redirect=permanent,last]
 RewriteRule ^/events.xml /events/feed/ [redirect=permanent,last]
 RewriteRule ^/about/ocr/ /ocr/ [redirect=permanent,last]
 
+RewriteRule ^/lccn/(.*)/coordinates/$ /opt/chronam/data/word_coordinates/lccn/$1/coordinates.json.gz [L]
+
 #
 # DocumentRoot: The directory out of which you will serve your
 # documents. By default, all requests are taken from this directory, but
@@ -87,6 +89,11 @@ AliasMatch ^/(sitemap-\d+.xml)$ /opt/chronam/static/$1
     Options Indexes FollowSymLinks
     Allow from all
 </Directory>
+
+AddEncoding x-gzip .gz
+<FilesMatch .*\.json.gz>
+    ForceType application/json
+</FilesMatch>
 
 AliasMatch ^/media/(.*)$ /opt/chronam/.static-media/$1
 
