Revert "allow chronam to be accessed locally"
This reverts commit e76476dd0bf7fa1490a647a628bc0b66933fdd4c.

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -62,7 +62,7 @@ AliasMatch ^/(sitemap-\d+.xml)$ /opt/chronam/static/$1
     Options FollowSymLinks
     AllowOverride None
     Order deny,allow
-    Require all granted
+    Allow from all
 </Directory>
 
 #
@@ -79,13 +79,13 @@ AliasMatch ^/(sitemap-\d+.xml)$ /opt/chronam/static/$1
     AllowOverride None
 
     Order allow,deny
-    Require all granted
+    Allow from all
 
 </Directory>
 
 <Directory /opt/chronam/data>
     Options Indexes FollowSymLinks
-    Require all granted
+    Allow from all
 </Directory>
 
 AliasMatch ^/media/(.*)$ /opt/chronam/.static-media/$1
@@ -97,5 +97,5 @@ AliasMatch ^/media/(.*)$ /opt/chronam/.static-media/$1
     AllowOverride None
 
     Order allow,deny
-    Require all granted
+    Allow from all
 </Directory>
