updated upstart celery scripts based on feedback

--- a/conf/celeryd.conf
+++ b/conf/celeryd.conf
@@ -13,4 +13,4 @@ post-stop exec sleep 10
 # setuid ndnp
 # setgid ndnp
 
-exec runuser --group=ndnp ndnp -c 'source /opt/chronam/ENV/bin/activate; django-admin.py celeryd_detach -c 2 --pidfile /var/log/celery/celeryd.pid --logfile /var/log/celery/celeryd.log'
+exec runuser --group=ndnp ndnp -c 'source /opt/chronam/ENV/bin/activate; django-admin.py celeryd -c 2 --pidfile /var/log/celery/celeryd.pid --logfile /var/log/celery/celeryd.log'
