refs #CHRONAM-57 - forgot to update root directory in apache conf

--- a/conf/chronam-apache2_4.conf
+++ b/conf/chronam-apache2_4.conf
@@ -61,8 +61,8 @@ AliasMatch ^/(sitemap-\d+.xml)$ /opt/chronam/static/$1
 <Directory />
     Options FollowSymLinks
     AllowOverride None
-    Order deny,allow
-    Allow from all
+
+    Require all granted
 </Directory>
 
 #
