refs #CHRONAM-57 - updated upstart scripts for AWS

--- a/conf/celerybeat.conf
+++ b/conf/celerybeat.conf
@@ -8,9 +8,13 @@ respawn
 
 post-stop exec sleep 10
 
-#RHEL 6 is too old to support this:
-#console log
-# setuid ndnp
-# setgid ndnp
+console log
+setuid ubuntu
+setgid ubuntu
 
-exec runuser --group=ndnp ndnp -c 'source /opt/chronam/ENV/bin/activate; django-admin.py celerybeat --pidfile /var/log/celery/celerybeat.pid --logfile /var/log/celery/celerybeat.log --detach'
+script
+  set -a
+  export DJANGO_SETTINGS_MODULE=chronam.settings
+  source /opt/chronam/ENV/bin/activate
+  django-admin.py celerybeat --pidfile /var/log/celery/celerybeat.pid --logfile /var/log/celery/celerybeat.log --detach
+end script
