--- a/conf/celeryd.conf
+++ b/conf/celeryd.conf
@@ -8,9 +8,13 @@ respawn
 
 post-stop exec sleep 10
 
-# RHEL 6 is too old to support this:
-# console log
-# setuid ndnp
-# setgid ndnp
+console log
+setuid ubuntu
+setgid ubuntu
 
-exec runuser --group=ndnp ndnp -c 'source /opt/chronam/ENV/bin/activate; django-admin.py celeryd -c 2 --pidfile /var/log/celery/celeryd.pid --logfile /var/log/celery/celeryd.log'
+script
+        set -a
+        export DJANGO_SETTINGS_MODULE=chronam.settings
+        . /opt/chronam/ENV/bin/activate
+        django-admin.py celeryd -c 2 --pidfile /var/log/celery/celeryd.pid --logfile /var/log/celery/celeryd.log
+end script
