adding changes from production that allows apache to directly serve files which makes chronam more performant

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -16,6 +16,9 @@ WSGIProcessGroup chronam-wsgi-app
 
 WSGIScriptAlias / /opt/chronam/conf/chronam.wsgi
 
+XSendFile On
+XSendFilePath /opt/chronam/data
+
 RewriteEngine  on
 
 RewriteRule ^/share/(.*) http://loc.gov/share/$1 [P] 
