--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -103,6 +103,6 @@ AliasMatch ^/media/(.*)$ /opt/chronam/.static-media/$1
     Allow from all
 </Directory>
 <VirtualHost *:80>
-    CustomLog "|$/usr/sbin/rotatelogs -f /var/log/httpd/chronam.%Y%m%d.$(hostname --fqdn).access.log 86400" combined
-    ErrorLog "|$/usr/sbin/rotatelogs -f /var/log/httpd/chronam.%Y%m%d.$(hostname --fqdn).error.log 86400"
+    CustomLog "|$/sbin/runuser ndnp -c /usr/sbin/rotatelogs -f /var/log/httpd/chronam.%Y%m%d.$(hostname --fqdn).access.log 86400" combined
+    ErrorLog "|$/sbin.runuser ndnp -c /usr/sbin/rotatelogs -f /var/log/httpd/chronam.%Y%m%d.$(hostname --fqdn).error.log 86400"
 </VirtualHost>
