add log rotate and have apache serve coordinate files

--- a/conf/chronam-apache2_4.conf
+++ b/conf/chronam-apache2_4.conf
@@ -16,6 +16,9 @@ WSGIProcessGroup chronam-wsgi-app
 
 WSGIScriptAlias / /opt/chronam/conf/chronam.wsgi
 
+XSendFile On
+XSendFilePath /opt/chronam/data
+
 RewriteEngine  on
 
 RewriteRule ^/share/(.*) http://loc.gov/share/$1 [P] 
@@ -36,6 +39,8 @@ RewriteRule ^/titles/place/(.+)$ /titles/places/$1 [redirect=permanent]
 RewriteRule ^/batches.xml /batches/feed/ [redirect=permanent,last]
 RewriteRule ^/events.xml /events/feed/ [redirect=permanent,last]
 RewriteRule ^/about/ocr/ /ocr/ [redirect=permanent,last]
+
+RewriteRule ^/lccn/(.*)/coordinates/$ /opt/chronam/data/word_coordinates/lccn/$1/coordinates.json.gz [L]
 
 #
 # DocumentRoot: The directory out of which you will serve your
@@ -86,6 +91,11 @@ AliasMatch ^/(sitemap-\d+.xml)$ /opt/chronam/static/$1
     Require all granted
 </Directory>
 
+AddEncoding x-gzip .gz
+<FilesMatch .*\.json.gz>
+    ForceType application/json
+</FilesMatch>
+
 AliasMatch ^/media/(.*)$ /opt/chronam/.static-media/$1
 
 <Directory /opt/chronam/.static-media>
@@ -96,3 +106,7 @@ AliasMatch ^/media/(.*)$ /opt/chronam/.static-media/$1
 
     Require all granted
 </Directory>
+<VirtualHost *:80>
+    CustomLog "|$/usr/bin/rotatelogs -f /var/log/apache2/chronam.%Y%m%d.$(hostname --fqdn).access.log 86400" combined
+    ErrorLog "|$/usr/bin/rotatelogs -f /var/log/apache2/chronam.%Y%m%d.$(hostname --fqdn).error.log 86400"
+</VirtualHost>
