fixing upstart script for celerybeat

--- a/conf/celerybeat.conf
+++ b/conf/celerybeat.conf
@@ -15,6 +15,6 @@ setgid ndnp
 script
   set -a
   export DJANGO_SETTINGS_MODULE=chronam.settings
-  source /opt/chronam/ENV/bin/activate
+  . /opt/chronam/ENV/bin/activate
   django-admin.py celerybeat --pidfile /var/log/celery/celerybeat.pid --logfile /var/log/celery/celerybeat.log --detach --workdir=/var/log/celery
 end script
