fixing celerybeat upstart config

--- a/conf/celerybeat.conf
+++ b/conf/celerybeat.conf
@@ -16,5 +16,5 @@ script
   set -a
   export DJANGO_SETTINGS_MODULE=chronam.settings
   . /opt/chronam/ENV/bin/activate
-  django-admin.py celerybeat --pidfile /var/log/celery/celerybeat.pid --logfile /var/log/celery/celerybeat.log --detach --workdir=/var/log/celery
+  django-admin.py celerybeat --pidfile /var/log/celery/celerybeat.pid --logfile /var/log/celery/celerybeat.log --workdir=/var/log/celery --schedule=/var/log/celery/celerybeat-schedule
 end script
