add /chronam-status available only to LoC machines to apache config

--- a/conf/chronam-apache2_4.conf
+++ b/conf/chronam-apache2_4.conf
@@ -106,6 +106,13 @@ AliasMatch ^/media/(.*)$ /opt/chronam/.static-media/$1
 
     Require all granted
 </Directory>
+<Location /chronam-status>
+    SetHandler server-status
+    Order deny,allow
+    Deny from all
+    Allow from 140.147.0.0/16
+    Allow from localhost
+</Location>
 <VirtualHost *:80>
     CustomLog "|$/usr/bin/rotatelogs -f /var/log/apache2/chronam.%Y%m%d.$(hostname --fqdn).access.log 86400" combined
     ErrorLog "|$/usr/bin/rotatelogs -f /var/log/apache2/chronam.%Y%m%d.$(hostname --fqdn).error.log 86400"
