--- a/conf/chronam-apache2_4.conf
+++ b/conf/chronam-apache2_4.conf
@@ -17,11 +17,11 @@ WSGIProcessGroup chronam-wsgi-app
 WSGIScriptAlias / /opt/chronam/conf/chronam.wsgi
 
 XSendFile On
-XSendFilePath /opt/chronam/data
+XSendFilePath /srv/chronam
 
 RewriteEngine  on
 
-RewriteRule ^/share/(.*) http://loc.gov/share/$1 [P] 
+RewriteRule ^/share/(.*) http://loc.gov/share/$1 [P]
 
 RewriteRule ^/data/(.+)/(.+)sample(.+) - [F]
 
@@ -40,7 +40,7 @@ RewriteRule ^/batches.xml /batches/feed/ [redirect=permanent,last]
 RewriteRule ^/events.xml /events/feed/ [redirect=permanent,last]
 RewriteRule ^/about/ocr/ /ocr/ [redirect=permanent,last]
 
-RewriteRule ^/lccn/(.*)/coordinates/$ /opt/chronam/data/word_coordinates/lccn/$1/coordinates.json.gz [L]
+RewriteRule ^/lccn/(.*)/coordinates/$ /srv/chronam/word_coordinates/lccn/$1/coordinates.json.gz [L]
 
 #
 # DocumentRoot: The directory out of which you will serve your
@@ -49,17 +49,17 @@ RewriteRule ^/lccn/(.*)/coordinates/$ /opt/chronam/data/word_coordinates/lccn/$1
 #
 DocumentRoot "/opt/chronam/static"
 
-AliasMatch ^/data/(.+) /opt/chronam/data/$1
-AliasMatch ^/data/ /opt/chronam/data/
+AliasMatch ^/data/(.+) /srv/chronam/$1
+AliasMatch ^/data/ /srv/chronam/
 AliasMatch ^/robots.txt$ /opt/chronam/static/robots.txt
 
 #
 # Each directory to which Apache has access can be configured with respect
 # to which services and features are allowed and/or disabled in that
-# directory (and its subdirectories). 
+# directory (and its subdirectories).
 #
-# First, we configure the "default" to be a very restrictive set of 
-# features.  
+# First, we configure the "default" to be a very restrictive set of
+# features.
 #
 <Directory />
     Options FollowSymLinks
@@ -84,7 +84,7 @@ AliasMatch ^/robots.txt$ /opt/chronam/static/robots.txt
     Require all granted
 </Directory>
 
-<Directory /opt/chronam/data>
+<Directory /srv/chronam>
     Options Indexes FollowSymLinks
     Require all granted
 </Directory>
