Tidy Apache 2.4 configuration
* Move all site-specific rules into <VirtualHost> so the
  Apache precedence rules allow mod_rewrite to override
  aliases
* Remove boilerplate comments
* Remove redundant aliases
* Organize similar rules into groups
* Normalize whitespace

--- a/conf/chronam-apache2_4.conf
+++ b/conf/chronam-apache2_4.conf
@@ -11,56 +11,13 @@ WSGIProcessGroup chronam-wsgi-app
     WSGIProcessGroup chronam-wsgi-images
 </LocationMatch>
 
-#ServerAdmin you@example.com
-#ServerName localhost
-
-WSGIScriptAlias / /opt/chronam/conf/chronam.wsgi
-
 XSendFile On
 XSendFilePath /srv/chronam
 
-RewriteEngine  on
-
-RewriteRule ^/share/(.*) http://loc.gov/share/$1 [P]
-
-RewriteRule ^/data/(.+)/(.+)sample(.+) - [F]
-
-RewriteRule ^/index.html / [redirect=permanent,last]
-RewriteRule ^/availableNewspapers.html /newspapers/ [redirect=permanent,last]
-RewriteRule ^/availableNewspaperChart.txt /newspapers.txt [redirect=permanent,last]
-RewriteRule ^/search_fulltext_advanced.html /search/pages/ [redirect=permanent,last]
-RewriteRule ^/search_directory_advanced.html /search/titles/ [redirect=permanent,last]
-RewriteRule ^/about.html /about/ [redirect=permanent,last]
-RewriteRule ^/help.html /help/ [redirect=permanent,last]
-RewriteRule ^/search_results_advanced.html  /search/pages/results/ [redirect=permanent,last]
-RewriteRule ^/explainOCR.html  /about/ocr/ [redirect=permanent,last]
-RewriteRule ^/lccn/(.+)/essay/?$ /lccn/$1/essays/ [redirect=permanent]
-RewriteRule ^/titles/place/(.+)$ /titles/places/$1 [redirect=permanent]
-RewriteRule ^/batches.xml /batches/feed/ [redirect=permanent,last]
-RewriteRule ^/events.xml /events/feed/ [redirect=permanent,last]
-RewriteRule ^/about/ocr/ /ocr/ [redirect=permanent,last]
-
-RewriteRule ^/lccn/(.*)/coordinates/$ /srv/chronam/word_coordinates/lccn/$1/coordinates.json.gz [L]
-
-#
-# DocumentRoot: The directory out of which you will serve your
-# documents. By default, all requests are taken from this directory, but
-# symbolic links and aliases may be used to point to other locations.
-#
+# Since all other content is served through the Django app the DocumentRoot will
+# be set to the static asset directory:
 DocumentRoot "/opt/chronam/static"
 
-AliasMatch ^/data/(.+) /srv/chronam/$1
-AliasMatch ^/data/ /srv/chronam/
-AliasMatch ^/robots.txt$ /opt/chronam/static/robots.txt
-
-#
-# Each directory to which Apache has access can be configured with respect
-# to which services and features are allowed and/or disabled in that
-# directory (and its subdirectories).
-#
-# First, we configure the "default" to be a very restrictive set of
-# features.
-#
 <Directory />
     Options FollowSymLinks
     AllowOverride None
@@ -68,12 +25,6 @@ AliasMatch ^/robots.txt$ /opt/chronam/static/robots.txt
     Require all granted
 </Directory>
 
-#
-# Note that from this point forward you must specifically allow
-# particular features to be enabled - so if something's not working as
-# you might expect, make sure that you have specifically enabled it
-# below.
-#
 <Directory /opt/chronam/static>
     ExpiresActive On
     ExpiresDefault A86400
@@ -89,13 +40,6 @@ AliasMatch ^/robots.txt$ /opt/chronam/static/robots.txt
     Require all granted
 </Directory>
 
-AddEncoding x-gzip .gz
-<FilesMatch .*\.json.gz>
-    ForceType application/json
-</FilesMatch>
-
-AliasMatch ^/media/(.*)$ /opt/chronam/.static-media/$1
-
 <Directory /opt/chronam/.static-media>
     ExpiresActive On
     ExpiresDefault A31536000
@@ -104,6 +48,15 @@ AliasMatch ^/media/(.*)$ /opt/chronam/.static-media/$1
 
     Require all granted
 </Directory>
+
+AddEncoding x-gzip .gz
+<FilesMatch .*\.json.gz>
+    # We'll let Apache serve gzip-compressed JSON data as a JSON response using
+    # gzip transfer encoding so the server performs no work recompressing the
+    # same potentially large data:
+    ForceType application/json
+</FilesMatch>
+
 <Location /chronam-status>
     SetHandler server-status
     Order deny,allow
@@ -111,7 +64,35 @@ AliasMatch ^/media/(.*)$ /opt/chronam/.static-media/$1
     Allow from 140.147.0.0/16
     Allow from localhost
 </Location>
+
 <VirtualHost *:80>
     CustomLog "|$/usr/bin/rotatelogs -f /var/log/apache2/chronam.%Y%m%d.$(hostname --fqdn).access.log 86400" combined
     ErrorLog "|$/usr/bin/rotatelogs -f /var/log/apache2/chronam.%Y%m%d.$(hostname --fqdn).error.log 86400"
+
+    WSGIScriptAlias / /opt/chronam/conf/chronam.wsgi
+
+    RewriteEngine on
+
+    RewriteRule ^/share/(.*) http://loc.gov/share/$1 [P]
+
+    RewriteRule ^/data/(.+)/(.+)sample(.+) - [F]
+
+    RewriteRule ^/index.html / [redirect=permanent,last]
+    RewriteRule ^/availableNewspapers.html /newspapers/ [redirect=permanent,last]
+    RewriteRule ^/availableNewspaperChart.txt /newspapers.txt [redirect=permanent,last]
+    RewriteRule ^/search_fulltext_advanced.html /search/pages/ [redirect=permanent,last]
+    RewriteRule ^/search_directory_advanced.html /search/titles/ [redirect=permanent,last]
+    RewriteRule ^/about.html /about/ [redirect=permanent,last]
+    RewriteRule ^/help.html /help/ [redirect=permanent,last]
+    RewriteRule ^/search_results_advanced.html  /search/pages/results/ [redirect=permanent,last]
+    RewriteRule ^/explainOCR.html  /about/ocr/ [redirect=permanent,last]
+    RewriteRule ^/lccn/(.+)/essay/?$ /lccn/$1/essays/ [redirect=permanent]
+    RewriteRule ^/titles/place/(.+)$ /titles/places/$1 [redirect=permanent]
+    RewriteRule ^/batches.xml /batches/feed/ [redirect=permanent,last]
+    RewriteRule ^/events.xml /events/feed/ [redirect=permanent,last]
+    RewriteRule ^/about/ocr/ /ocr/ [redirect=permanent,last]
+
+    RewriteRule ^/lccn/(.*)/coordinates/$ /srv/chronam/word_coordinates/lccn/$1/coordinates.json.gz [L]
+
+    AliasMatch ^/media/(.*)$ /opt/chronam/.static-media/$1
 </VirtualHost>
