--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
-  "devDependencies": {
-    "prettier": "^1.9.2"
-  }
+    "devDependencies": {
+        "eslint": "^5.8.0",
+        "eslint-plugin-prettier": "^3.0.0",
+        "prettier": "^1.14.3",
+        "stylelint": "^9.7.1",
+        "stylelint-config-prettier": "^4.0.0",
+        "stylelint-config-recommended": "^2.1.0"
+    }
 }
