Synchronize Apache 2.4 configuration with earlier versions

--- a/conf/chronam-apache2_4.conf
+++ b/conf/chronam-apache2_4.conf
@@ -71,6 +71,8 @@ AddEncoding x-gzip .gz
 
     WSGIScriptAlias / /opt/chronam/conf/chronam.wsgi
 
+    AliasMatch ^/robots.txt$ /opt/chronam/static/robots.txt
+
     RewriteEngine on
 
     RewriteRule ^/share/(.*) http://loc.gov/share/$1 [P]
