Update Python linter settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,19 @@
 [flake8]
 max_line_length = 110
+exclude = ENV
 
 [pycodestyle]
 max_line_length = 110
+exclude = ENV
+ignore =
 
 [isort]
-combine_as_imports = true
 default_section = THIRDPARTY
-include_trailing_comma = true
+force_grid_wrap = 0
+include_trailing_comma = True
 known_first_party = chronam
+line_length = 110
+multi_line_output = 3
+not_skip = __init__.py
+skip = ENV
+use_parentheses = True
